tests/fixtures/invalid/bool_sub_list.py
# Cannot subtract Bool and List[int]
x: bool = True - [1, 2, 3]
